WIP: created start agent wizard